frontend-ui/manifests/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-processor
  namespace: youtube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-processor
  template:
    metadata:
      labels:
        app: video-processor
    spec:
      containers:
        - name: video-processor
          image: chandan669/video-processor:latest
          ports:
            - containerPort: 5001
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: processor-service
  namespace: youtube
spec:
  selector:
    app: video-processor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
