frontend-ui/manifests/uploader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-uploader
  namespace: youtube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-uploader
  template:
    metadata:
      labels:
        app: video-uploader
    spec:
      containers:
        - name: video-uploader
          image: chandan669/video-uploader:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-service
  namespace: youtube
spec:
  selector:
    app: video-uploader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
