frontend-ui/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-ingress
  namespace: youtube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: youtube.local
      http:
        paths:
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: uploader-service
                port:
                  number: 80
          - path: /process
            pathType: Prefix
            backend:
              service:
                name: processor-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ui-service
                port:
                  number: 80
